update weapon grid functions

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -4,20 +4,20 @@ body {
 }
 
 .grid {
-  margin: 3%;
+  /* margin: 3%; */
   background-color: #0098b3;
-background-image: url("https://www.transparenttextures.com/patterns/hexellence.png");
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  background-image: url("https://www.transparenttextures.com/patterns/hexellence.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
 .mWeapon {
-    padding: 2% 2%;
+    /* padding: 2% 2%; */
     /* background-color: red; */
     position: relative;
     display: inline-block;
 }
 
-.mWeapon-imt {
+.mWeapon-img {
     width: 100%;
     /* position: absolute;
     transform: rotate(25deg); */
@@ -31,14 +31,15 @@ background-image: url("https://www.transparenttextures.com/patterns/hexellence.p
 
 .subWeapon {
     /* background-color: yellow; */
-    padding: 2px;
+    /* padding: 2px; */
     height: 3.4rem;
     position: relative;
     display: inline-block;
+    border-radius: 0;
 }
 
 .subWeapon-img {
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
     float: right;
 }
