--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -14,7 +14,7 @@ body {
     display: inline-block;
     box-sizing: none;
     padding: 1%;
-    margin-top: 5%;
+    margin-top: 3%;
     vertical-align: top;
 }
 
@@ -36,11 +36,12 @@ body {
     padding: 1%;
     margin-top: 5%;
     box-sizing: none;
+    vertical-align: top;
 }
 
 .subWeapon-img {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: relative;
     bottom: 20%;
 }
