--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -4,8 +4,10 @@ body {
 }
 
 .grid {
-    background-color: #0098b3;
-    background-image: url("https://www.transparenttextures.com/patterns/hexellence.png");
+    border-radius: 1%;
+    box-shadow: 3px 3px 5px 6px gray;
+    background-color: #057852;
+    background-image: url("https://www.transparenttextures.com/patterns/nice-snow.png");
     /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
@@ -21,6 +23,7 @@ body {
 .mWeapon-img {
     width: 100%;
     height: 100%;
+    box-shadow: 1px 1px 2px 3px #024932;
 }
 
 .subGrid {
@@ -44,4 +47,5 @@ body {
     height: 100%;
     position: relative;
     bottom: 20%;
+    box-shadow: 1px 1px 2px 3px #024932;
 }
