--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -1,11 +1,13 @@
 body {
     margin: auto;
     padding: 2% 5%;
+    background-color: rgb(171, 232, 250);
 }
 
 .grid {
     border-radius: 1%;
     box-shadow: 3px 3px 5px 6px gray;
+    margin-bottom: 5%;
 }
 
 .weapon {
@@ -31,14 +33,14 @@ body {
 }
 
 .mWeapon-img {
-    width: 100%;
     height: 100%;
+    width: 100%;
     box-shadow: 1px 1px 2px 3px #024932;
 }
 
 .mWeapon:hover .mWeapon-img {
     opacity: 0.5;
-  }
+}
 
 .subGrid {
     position: relative;
@@ -55,16 +57,21 @@ body {
 
 .subWeapon:hover .subWeapon-img {
     opacity: 0.5;
-  }
+}
 
 .subWeapon-img {
     width: 100%;
-    /* height: 100%; */
     position: relative;
     line-height: 1.5rem;
     box-shadow: 1px 1px 2px 3px #024932;
 }
 
-.content {
-    padding: 5%;
+.listItem {
+    position: relative;
+    display: inline-block;
+    margin-right: 5%
+}
+
+.listItem-img {
+    width: 5%;
 }
