--- a/client/src/components/css/styles.css
+++ b/client/src/components/css/styles.css
@@ -1,19 +1,35 @@
 body {
-    margin: auto;
-    padding: 2% 5%;
+    margin: 2% 5%;
     background-color: rgb(171, 232, 250);
 }
 
 .grid {
     border-radius: 1%;
     box-shadow: 3px 3px 5px 6px gray;
-    margin-bottom: 5%;
+    /* margin-bottom: 3%; */
+    /* padding: 0; */
+}
+
+.grid-sm {
+    margin: auto;
+}
+
+.btn-left {
+    margin-left: -15%;
+}
+
+.btn-right {
+    margin-right: -15%;
+}
+
+.navbar {
+    margin: 2% -3% 2%;
+    border-radius: .3rem;
 }
 
 .weapon {
     background-color: #057852;
     background-image: url("https://www.transparenttextures.com/patterns/nice-snow.png");
-    margin-right: 5%;
     /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
@@ -32,9 +48,14 @@ body {
     vertical-align: top;
 }
 
+.Grid-img-border {
+    border: 5px solid #dc3545!important;
+    border-radius: .3rem!important;
+}
+
 .mWeapon-img {
-    height: 100%;
     width: 100%;
+    height: 100%;
     box-shadow: 1px 1px 2px 3px #024932;
 }
 
@@ -73,13 +94,10 @@ body {
 .listItem {
     position: relative;
     display: inline-block;
-    margin-right: 5%;
     text-align: left;
     line-height: 1.5rem;
-    padding-bottom: 2%;
 }
 
 .listItem-img {
     width: 100%;
-    padding: 0;
 }
